// table, select the proper icon (see legend at the bottom of this documents)
// and adapt the link to point to your pull request. Please dont forget
// the empty line separators.

////
| 🎁🐛🐣🗑️✨
|
| https://github.com/knative/client/pull/[#]
////

## v0.20.0 (2021-01-14)
[cols="1,10,3", options="header", width="100%"]
|===
| | Description | PR

| 🐣
| Removes unnecessary help message introduced for machine-readable outputs for command 'kn source binding describe'
| https://github.com/knative/client/pull/1158[#1158]

| 🐣
| Removes unnecessary help message introduced for machine-readable outputs for commands which does not have -o url flag
| https://github.com/knative/client/pull/1152[#1152]

| 🐣
| Improve error handling in clients
| https://github.com/knative/client/pull/1154[#1154]

| 🎁
| Add machine readable output (-o flag) to kn source ping describe
| https://github.com/knative/client/pull/1150[#1150]

| 🎁
| Add machine readable output (-o flag) to kn source binding describe
| https://github.com/knative/client/pull/1148[#1148]

| 🎁
| Add machine readable output (-o flag) to kn source apiserver describe
| https://github.com/knative/client/pull/1146[#1146]

| 🐛
| Fix a race condition when using Kubernetes watches
| https://github.com/knative/client/pull/1113[#1113]

| 🐛
| Embed the namespace in request body while creating channels
| https://github.com/knative/client/pull/1117[#1117]

| 🎁
| Add "url" output format to return broker url in broker describe and channel url in channel describe
| https://github.com/knative/client/pull/1118[#1118]

| 🎁
| Add machine readable output (-o flag) to kn broker describe
| https://github.com/knative/client/pull/1124[#1124]

| 🎁
| Add machine readable output (-o flag) to kn trigger describe
| https://github.com/knative/client/pull/1121[#1121]
|===

## v0.18.4 (2020-11-26)
[cols="1,10,3", options="header", width="100%"]
|===
| | Description | PR

| 🐛
| Fix a race condition when using Kubernetes watches